2004-04-25  Alexandre Duret-Lutz  <adl@gnu.org>

	* configure.ac, NEWS: Bump version to 1.8.4a.

	* configure.ac, NEWS: Bump version to 1.8.4.

	* lib/texinfo.tex: New upstream version.

	* lib/depcomp (tru64): Clarify comments.  Thanks to Nicolas Joly.

	* doc/automake.texi (Headers): Revamp.

2004-04-24  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/am/tags.am (TAGS): Pass `.' to Exuberant Ctags if
	--etags-include is used but no other files are supplied, so it
	creates the TAGS file anyway.
	Report from Akim Demaille.

	* lib/depcomp (tru64) [libtool]: Nicolas Joly reported on
	2002-06-12 that dependencies were output in $dir.libs/$base.lo.d.
	Teun Burgers reported on 2004-03-30 they were in
	$dir.libs/$base.o.d.  Try both.

2004-04-18  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/am/distdir.am (distcheck): Typo in shar decompression.

	* NEWS: English corrections from Eric Sunshine.

	* configure.ac, NEWS: Bump version to 1.8.3c.

	* configure.ac, NEWS: Bump version to 1.8.3b.

	* lib/config.guess, lib/config.sub, lib/texinfo.tex: New upstream
	versions.

2004-04-12  Alexandre Duret-Lutz  <adl@gnu.org>

	Fix for PR automake/416:
	* m4/depend.m4 (_AM_DEPENDENCIES): Catch `not supported' ICC 8.0
	remarks.
	From Peter Seiderer.

2004-04-10  Andreas Buening  <andreas.buening@nexgo.de>

	* aclocal.in, automake.in, configure.ac, Makefile.am,
	tests/aclocal.in, tests/automake.in, tests/defs.in:
	Use PATH_SEPARATOR from autoconf instead of ':'.

2004-04-09  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (handle_lib_objects): Pass the condition of
	the variable definition to handle_LIBOBJS and handle_ALLOCA,
	not the aggregated conditions.
	* tests/Makefile.am (TESTS): Add libobj14.test.
	* tests/libobj14.test: New file.
	Report from Bill Davidson.

2004-04-01  Paul Eggert  <eggert@twinsun.com>

	* lib/install-sh: If "mv -f" works, use it, and fall back to
	the old "test -f" + "rm -f" + "mv" method only if "mv -f" does