@@ -139,6 +139,7 @@ Manu Rouat		emmanuel.rouat@wanadoo.fr
 Marcus Brinkmann	Marcus.Brinkmann@ruhr-uni-bochum.de
 Marcus G. Daniels	mgd@ute.santafe.edu
 Marius Vollmer		mvo@zagadka.ping.de
+Mark D. Baushke		mdb@cvshome.org
 Mark Eichin		eichin@cygnus.com
 Mark Elbrecht		snowball3@bigfoot.com
 Mark Galassi		rosalia@nis.lanl.gov
