@@ -113,9 +113,11 @@ then
 	( etags --version -o /dev/null ) || exit 77
 	;;
       GNUmake)
-	# Use --version and -v, because SGI Make doesn't fail on --version.
-	echo "$me: running $MAKE --version -v"
-	( $MAKE --version -v ) || exit 77
+	# Use --version AND -v, because SGI Make doesn't fail on --version.
+	# Also grep for GNU because newer versions of FreeBSD make do
+	# not complain about `--version' (they seem to silently ignore it).
+	echo "$me: running $MAKE --version -v | grep GNU"
+	( $MAKE --version -v | grep GNU ) || exit 77
 	;;
       gcc)
         # When gcc is required, export `CC=gcc' so that ./configure
