@@ -1,3 +1,8 @@
+2004-05-10  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* tests/defs.in (GNUmake): Grep for GNU to parry FreeBSD make.
+	Report from Mark D. Baushke.
+
 2004-04-25  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* configure.ac, NEWS: Bump version to 1.8.4a.
